add: flux action creator, complete level 14

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<script type="text/babel" src="./component/TodoList.js"></script>
 	<script type="text/babel" src="./component/TodoApp.js"></script>
 	<script type="text/babel" src="./dispatcher/AppDispatcher.js"></script>
+	<script tpye="text/babel" src="./constants/ActionTypes.js"></script>
+	<script type="text/babel" src="./action/TodoAction.js"></script>
 	<script type="text/babel">
 		const { TodoApp } = window.App;
 	    ReactDOM.render(
