--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/1.0.0/fetch.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/flux/2.1.1/Flux.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/EventEmitter/5.0.0/EventEmitter.js"></script>
 
 	<script>window.App = {};</script>
 	<script type="text/babel" src="./component/InputField.js"></script>
@@ -21,6 +22,7 @@
 	<script type="text/babel" src="./dispatcher/AppDispatcher.js"></script>
 	<script tpye="text/babel" src="./constants/ActionTypes.js"></script>
 	<script type="text/babel" src="./action/TodoAction.js"></script>
+	<script type="text/babel" src="./store/TodoStore.js"></script>
 	<script type="text/babel">
 		const { TodoApp } = window.App;
 	    ReactDOM.render(
