add: controller view, complete level 16

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script type="text/babel" src="./component/TodoApp.js"></script>
 	<script type="text/babel" src="./dispatcher/AppDispatcher.js"></script>
 	<script tpye="text/babel" src="./constants/ActionTypes.js"></script>
-	<script type="text/babel" src="./action/TodoAction.js"></script>
+	<script type="text/babel" src="./action/TodoActions.js"></script>
 	<script type="text/babel" src="./store/TodoStore.js"></script>
 	<script type="text/babel">
 		const { TodoApp } = window.App;
