--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 	<script type="text/babel" src="./component/TodoItem.js"></script>
 	<script type="text/babel" src="./component/TodoList.js"></script>
 	<script type="text/babel" src="./component/TodoApp.js"></script>
+	<script type="text/babel" src="./component/TodoHeaderContainer.js"></script>
+	<script type="text/babel" src="./component/CreateTodoFieldContainer.js"></script>
+	<script type="text/babel" src="./component/TodoListContainer.js"></script>
 	<script type="text/babel" src="./dispatcher/AppDispatcher.js"></script>
 	<script tpye="text/babel" src="./constants/ActionTypes.js"></script>
 	<script type="text/babel" src="./action/TodoActions.js"></script>
