--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/EventEmitter/5.0.0/EventEmitter.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/1.0.0/fetch.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
+	<script src="https://cdn.rawgit.com/facebook/flux/master/dist/FluxUtils.js"></script>
 
 	<script>window.App = {};</script>
 	<script type="text/babel" src="./dispatcher/AppDispatcher.js"></script>
