--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/1.0.0/fetch.js"></script>
 	<script>window.App = {};</script>
-	<script type="text/babel" src="./InputField.js"></script>
-	<script type="text/babel" src="./TodoHeader.js"></script>
-	<script type="text/babel" src="./TodoItem.js"></script>
-	<script type="text/babel" src="./TodoList.js"></script>
-	<script type="text/babel" src="./TodoApp.js"></script>
+	<script type="text/babel" src="./component/InputField.js"></script>
+	<script type="text/babel" src="./component/TodoHeader.js"></script>
+	<script type="text/babel" src="./component/TodoItem.js"></script>
+	<script type="text/babel" src="./component/TodoList.js"></script>
+	<script type="text/babel" src="./component/TodoApp.js"></script>
 	<script type="text/babel">
 		const { TodoApp } = window.App;
 	    ReactDOM.render(
