add: reducers, complete level 20

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<script tpye="text/babel" src="./constants/ActionTypes.js"></script>
 	<script type="text/babel" src="./actions/TodoActions.js"></script>
 	<script type="text/babel" src="./stores/TodoStore.js"></script>
+	<script type="text/babel" src="./reducers/index.js"></script>
+	<script type="text/babel" src="./reducers/todos.js"></script>
 	<script type="text/babel" src="./components/InputField.js"></script>
 	<script type="text/babel" src="./components/CreateTodoFieldContainer.js"></script>
 	<script type="text/babel" src="./components/TodoHeader.js"></script>
