--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/1.0.0/fetch.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
 	<script src="https://cdn.rawgit.com/facebook/flux/master/dist/FluxUtils.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.4.0/redux.js"></script>
 
 	<script>window.App = {};</script>
 	<script type="text/babel" src="./dispatcher/AppDispatcher.js"></script>
@@ -29,12 +30,7 @@
 	<script type="text/babel" src="./components/TodoList.js"></script>
 	<script type="text/babel" src="./components/TodoListContainer.js"></script>
 	<script type="text/babel" src="./components/TodoApp.js"></script>
-	<script type="text/babel">
-		const { TodoApp } = window.App;
-		ReactDOM.render(
-			<TodoApp />,
-			document.getElementById('app')
-		);
+	<script type="text/babel" src="./main.js">
 	</script>
 </body>
 </html>
