--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
 	<script src="https://cdn.rawgit.com/facebook/flux/master/dist/FluxUtils.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.4.0/redux.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/4.4.5/react-redux.js"></script>
 
 	<script>window.App = {};</script>
-	<script type="text/babel" src="./dispatcher/AppDispatcher.js"></script>
 	<script tpye="text/babel" src="./constants/ActionTypes.js"></script>
 	<script type="text/babel" src="./actions/TodoActions.js"></script>
-	<script type="text/babel" src="./stores/TodoStore.js"></script>
 	<script type="text/babel" src="./reducers/index.js"></script>
 	<script type="text/babel" src="./reducers/todos.js"></script>
 	<script type="text/babel" src="./components/InputField.js"></script>
