--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script src="https://cdn.rawgit.com/facebook/flux/master/dist/FluxUtils.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.4.0/redux.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/4.4.5/react-redux.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.8.1/immutable.js"></script>
 
 	<script>window.App = {};</script>
 	<script tpye="text/babel" src="./constants/ActionTypes.js"></script>
